# bad_api

./: .env  README.md  pyproject.toml
test1/: app.py
test1/instance/: db.sqlite3
test1/templates/: index.html
